# automacao-certificados

./: .env.sample  .gitignore  HEXAGONAL_ARCHITECTURE_GUIDE.md  Makefile  README.md  SERVICE_LAYER_GUIDE.md  docker-compose.yml  pyproject.toml  test_generate_report_with_multiple_results.html
docker/: Dockerfile
sphinx-docs/: AUTODOC_QUICK_START.md  CROSS_REFERENCES.md  THEME_OPTIONS.md
sphinx-docs/source/: api_reference.rst  architecture.rst  conf.py  configuration.rst  contributing.rst  development.rst  docstring_guide.rst  index.rst  installation.rst  introduction.rst
src/automacao_certificados/: main.py  test.py
src/automacao_certificados/composition/: container.py
src/automacao_certificados/config/: config.py
src/automacao_certificados/selenium_automations/: base_page.py
src/automacao_certificados/selenium_automations/adapters/: __init__.py
src/automacao_certificados/selenium_automations/adapters/acquisition/: selenium_acquisition.py
src/automacao_certificados/selenium_automations/adapters/api_requester/: __init__.py  alagoas_api_requester.py  certificado_api_requester.py  error_mapping.py  exceptions.py  ppe_api_requester.py
src/automacao_certificados/selenium_automations/adapters/captcha_gateway/: __init__.py  selenium_captcha_gateway.py
src/automacao_certificados/selenium_automations/adapters/captcha_solver/: __init__.py  image_captcha_solver.py
src/automacao_certificados/selenium_automations/adapters/document_downloader/: __init__.py  document_alagoas_downloader.py  document_arapiraca_downloader.py  document_delmiro_downloader.py  document_federal_downloader.py  document_fgts_downloader.py  document_maceio_downloader.py  document_penedo_downloader.py
src/automacao_certificados/selenium_automations/adapters/email/: __init__.py  (+1 more)
src/automacao_certificados/selenium_automations/application/: __init__.py
src/automacao_certificados/selenium_automations/composition/: __init__.py  adapters.py  container.py  infrastructure.py  services.py  use_cases.py  workflow.py
src/automacao_certificados/selenium_automations/core/: exceptions.py
src/automacao_certificados/selenium_automations/infra/: __init__.py
src/automacao_certificados/selenium_automations/utils/: utils.py
src/automacao_certificados/selenium_package_extension/: __init__.py
src/automacao_certificados/selenium_package_extension/actions/: __init__.py  select_option_by_text.py  select_option_by_value.py  take_screenshot.py
src/automacao_certificados/selenium_package_extension/executors/: __init__.py  retry_until_element_contains_text.py  retry_until_element_has_text.py
tests/selenium_automations/adapters/api_requester/: test_alagoas_api_requester.py  test_certificado_api_requester.py  test_error_mapping.py  test_ppe_api_requester.py
tests/selenium_automations/adapters/captcha_gateway/: test_selenium_captcha_gateway.py
tests/selenium_automations/adapters/captcha_solver/: test_image_captcha_solver.py
tests/selenium_automations/adapters/document_downloader/: test_document_alagoas_downloader.py  test_document_arapiraca_downloader.py  test_document_delmiro_downloader.py  test_document_fgts_downloader.py  test_document_maceio_downloader.py  test_document_penedo_downloader.py
tests/selenium_automations/adapters/email/: test_smtp_email_sender.py
tests/selenium_automations/adapters/extractors/: test_certificado_alagoas_extractor.py  test_certificado_arapiraca_extractor.py  test_certificado_caixa_extractor.py  test_certificado_delmiro_extractor.py  test_certificado_federal_extractor.py  test_certificado_maceio_extractor.py  test_certificado_penedo_extractor.py
tests/selenium_automations/adapters/http/: test_httpx_client.py  test_requests_client.py
tests/selenium_automations/adapters/image_processor/: test_groq_image_processor.py
tests/selenium_automations/adapters/municipio_getter/: test_receita_api_getter.py
tests/selenium_automations/adapters/persistance/: test_certificado_api_persistance.py
tests/selenium_automations/adapters/persistence/: test_api_persistence.py
tests/selenium_automations/adapters/report_generator/: test_download_certificates_report_generator.py
tests/selenium_automations/adapters/selenium_downloader/: test_document_fgts_downloader.py  test_document_maceio_downloader.py
tests/selenium_automations/adapters/selenium_workflow/: test_certidao_estadual_selenium_workflow.py
tests/selenium_automations/application/services/: test_certificado_api_service.py  test_logging_service.py  test_register_document_service.py
tests/selenium_automations/application/use_cases/: test_download_certidao_estadual_al.py  test_download_certificado_arapiraca.py  test_download_certificado_maceio.py  test_download_certificates.py  test_send_download_certificates_report_via_email_use_case.py
tests/selenium_automations/application/workflow/: test_workflow.py  test_workflow_selector.py
tests/selenium_automations/core/interfaces/: test_base_image_processor.py  test_base_page.py  test_captcha_solver.py  test_document_downloader.py  test_document_persistance.py  test_image_processor.py  test_logging_register.py  test_municipio_getter.py
tests/selenium_automations/infra/api_requester/: test_alagoas_api_requester.py  test_certificado_api_requester.py  test_direct_data_api_requester.py  test_error_mapping.py  test_ppe_api_requester.py
tests/selenium_automations/infra/email/: test_email_utils.py  test_smtp_client.py
tests/selenium_automations/interfaces/: test_document_downloader.py  test_document_extractor.py  test_image_processor.py  test_municipio_getter.py
tests/selenium_automations/utils/: test_utils.py
tests/selenium_automations/websites/certidao_estadual_al/: test_consulta_page.py
tests/selenium_automations/websites/use_cases/: test_get_certidao_by_cnpj_using_groq.py  test_get_certificado_using_groq.py
tests/selenium_package_extension/actions/: test_select_option_by_text.py  test_select_option_by_value.py  test_take_screenshot.py
tests/selenium_package_extension/executors/: test_retry_until_element_contains_text.py  test_retry_until_element_has_text.py
(+200 files in other folders)
