[project]
name = "automacao_certificados"
readme = "README.md"
version = "0.0.1"
authors = [
  { name="João Gabriel Sampaio de Barros", email="jgabrielsb2002@gmail.com"},
]
description = "A Python package for automating the process of downloading certificates from several sources"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
   "accessible-pygments>=0.0.5",
   "alabaster>=0.7.16",
   "annotated-types>=0.7.0",
   "anyio>=4.11.0",
   "asttokens>=3.0.1",
   "attrs>=25.4.0",
   "babel>=2.17.0",
   "beautifulsoup4>=4.14.2",
   "blinker>=1.9.0",
   "bota>=4.0.155",
   "botasaurus>=4.0.96",
   "botasaurus-api>=4.0.10",
   "botasaurus-driver>=4.0.92",
   "botasaurus-humancursor>=4.0.83",
   "botasaurus-proxy-authentication>=1.0.16",
   "botasaurus-requests>=4.0.38",
   "brotli>=1.2.0",
   "bs4>=0.0.2",
   "certifi>=2025.11.12",
   "cffi>=2.0.0",
   "charset-normalizer>=3.4.4",
   "chromedriver-autoinstaller-fix>=1.0.6",
   "click>=8.1.8",
   "close-chrome>=4.0.40",
   "cloudscraper>=1.2.71",
   "comm>=0.2.3",
   "cryptography>=46.0.3",
   "cssselect2>=0.8.0",
   "debugpy>=1.8.17",
   "decorator>=5.2.1",
   "deprecated>=1.3.1",
   "distro>=1.9.0",
   "dnspython>=2.7.0",
   "docutils>=0.21.2",
   "email-validator>=2.3.0",
   "et-xmlfile>=2.0.0",
   "executing>=2.2.1",
   "fastjsonschema>=2.21.2",
   "fonttools>=4.60.1",
   "furo>=2025.9.25",
   "gevent>=25.9.1",
   "geventhttpclient>=2.3.5",
   "greenlet>=3.2.4",
   "groq>=0.36.0",
   "h11>=0.16.0",
   "h2>=4.3.0",
   "hpack>=4.1.0",
   "httpcore>=1.0.9",
   "httpx>=0.28.1",
   "hyperframe>=6.1.0",
   "idna>=3.11",
   "imagesize>=1.4.1",
   "iniconfig>=2.1.0",
   "ipykernel>=6.31.0",
   "ipython>=8.18.1",
   "ipython-pygments-lexers>=1.1.1",
   "javascript-fixes>=1.1.29",
   "jedi>=0.19.2",
   "jinja2>=3.1.6",
   "joblib>=1.5.2",
   "jsonschema>=4.25.1",
   "jsonschema-specifications>=2025.9.1",
   "jupyter-client>=8.6.3",
   "jupyter-core>=5.8.1",
   "kaitaistruct>=0.11",
   "lxml>=6.0.2",
   "markdown-it-py>=3.0.0",
   "markupsafe>=3.0.3",
   "matplotlib-inline>=0.2.1",
   "mdurl>=0.1.2",
   "narwhals>=2.12.0",
   "nbformat>=5.10.4",
   "nest-asyncio>=1.6.0",
   "numpy>=2.0.2",
   "openpyxl>=3.1.5",
   "outcome>=1.3.0.post0",
   "packaging>=25.0",
   "pandas>=2.3.3",
   "parso>=0.8.5",
   "pdfkit>=1.0.0",
   "pdfminer-six>=20251107",
   "pdfplumber>=0.11.8",
   "pexpect>=4.9.0",
   "pillow>=11.3.0",
   "platformdirs>=4.4.0",
   "plotly>=6.5.0",
   "pluggy>=1.6.0",
   "prompt-toolkit>=3.0.52",
   "psutil>=7.1.3",
   "ptyprocess>=0.7.0",
   "pure-eval>=0.2.3",
   "pyasn1>=0.6.1",
   "pycparser>=2.23",
   "pydantic>=2.12.5",
   "pydantic-core>=2.41.5",
   "pydantic-settings>=2.11.0",
   "pydyf>=0.11.0",
   "pygments>=2.19.2",
   "pyopenssl>=25.3.0",
   "pyparsing>=3.2.5",
   "pypdfium2>=5.1.0",
   "pyphen>=0.17.2",
   "pysocks>=1.7.1",
   "pytesseract>=0.3.13",
   "pytest>=8.4.2",
   "pytest-html>=4.1.1",
   "pytest-metadata>=3.1.1",
   "pytest-mock>=3.15.1",
   "python-dateutil>=2.9.0.post0",
   "python-dotenv>=1.2.1",
   "pytweening>=1.2.0",
   "pytz>=2025.2",
   "pyvirtualdisplay>=3.0",
   "pyzmq>=27.1.0",
   "referencing>=0.36.2",
   "requests>=2.32.5",
   "requests-toolbelt>=1.0.0",
   "respx>=0.22.0",
   "rich>=14.2.0",
   "roman-numerals-py>=3.1.0",
   "rpds-py>=0.27.1",
   "schedule>=1.2.2",
   "selenium>=4.36.0",
   "selenium-package>=0.0.1",
   "selenium-wire>=5.1.0",
   "six>=1.17.0",
   "sniffio>=1.3.1",
   "snowballstemmer>=3.0.1",
   "sortedcontainers>=2.4.0",
   "soupsieve>=2.8",
   "sphinx>=7.4.7",
   "sphinx-basic-ng>=1.0.0b2",
   "sphinxcontrib-applehelp>=2.0.0",
   "sphinxcontrib-devhelp>=2.0.0",
   "sphinxcontrib-htmlhelp>=2.1.0",
   "sphinxcontrib-jsmath>=1.0.1",
   "sphinxcontrib-qthelp>=2.0.0",
   "sphinxcontrib-serializinghtml>=2.0.0",
   "stack-data>=0.6.3",
   "tinycss2>=1.4.0",
   "tinyhtml5>=2.0.0",
   "tornado>=6.5.2",
   "traitlets>=5.14.3",
   "trio>=0.31.0",
   "trio-websocket>=0.12.2",
   "typing-extensions>=4.15.0",
   "typing-inspection>=0.4.2",
   "tzdata>=2025.2",
   "urllib3>=2.5.0",
   "uv>=0.9.13",
   "wcwidth>=0.2.14",
   "weasyprint>=66.0",
   "webencodings>=0.5.1",
   "websocket-client>=1.9.0",
   "wkhtmltopdf>=0.2",
   "wrapt>=2.0.1",
   "wsproto>=1.2.0",
   "zope-event>=6.0",
   "zope-interface>=8.0.1",
   "zopfli>=0.2.3.post1",
   "zstandard>=0.25.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

# 👇 tell Hatchling exactly what to ship in the wheel
[tool.hatch.build.targets.wheel]
packages = ["src/automacao_certificados"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--html=report.html",
]
markers = [
  "selenium_workflow_tests: marks tests as selenium workflow tests (deselect with '-m \"not selenium_workflow_tests\"')",
]
